# rear_sight_clone_rpi_webrtc_gst_ocv

./: .gitignore  CMakeLists.txt  README.md  rear_sight_webrtc_frame_change.cpp  rear_sight_webrtc_frame_change_raspberry_embedded.cpp
face_detector_ocv/: face_detection_processor.cpp  face_detection_processor.h
rear_sight_processor/: rear_sight_processor.cpp  rear_sight_processor.h
web_src/: index.html
